chore: update env examples

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # IMAP Server Configuration
-IMAP_HOST=mail.example.com
+IMAP_HOST="mail.example.com"
 IMAP_PORT=993
-IMAP_USERNAME=user@example.com
-IMAP_PASSWORD=your_password_here
-IMAP_USE_TLS=true 
+IMAP_USERNAME="user@example.com"
+IMAP_PASSWORD="your_password_here"
+IMAP_USE_TLS="true" 
